<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/brick_wall">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_title"
                android:textColor="@color/letter_color"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/lace" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@mipmap/simon_says_logo"
                android:contentDescription="@string/game_logo"
                android:layout_margin="5dp"/>

            <RadioGroup
                android:id="@+id/gameTypeOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/singlePlayerOption">
                <RadioButton
                    android:id="@+id/singlePlayerOption"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_player"
                    android:textColor="@color/letter_color"
                    android:buttonTint="@color/letter_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:tag="0"
                    tools:targetApi="lollipop" />
                <RadioButton
                    android:id="@+id/multiPlayerOption"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multi_player"
                    android:textColor="@color/letter_color"
                    android:buttonTint="@color/letter_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:tag="1"
                    tools:targetApi="lollipop" />
            </RadioGroup>

            <EditText
                android:id="@+id/playerNameEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/letter_color"
                android:textSize="18sp"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/player_name_entry"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:text="@string/start_game_button"
                android:onClick="buttonStartGame"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
