<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@mipmap/brick_wall">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/score01Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_player_score"
            android:textColor="@color/letter_color"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="16sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/score01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letter_color"
            android:layout_toRightOf="@+id/score01Label"
            android:layout_toEndOf="@+id/score01Label"
            android:textSize="18sp"
            android:width="50dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/score02Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_player_score"
            android:textColor="@color/letter_color"
            android:layout_toStartOf="@+id/score02"
            android:layout_toLeftOf="@+id/score02"
            android:textSize="16sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/scoreSingleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/letter_color"
            android:layout_toStartOf="@+id/score02"
            android:layout_toLeftOf="@+id/score02"
            android:textSize="16sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/score02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letter_color"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="18sp"
            android:width="50sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/simonButton01"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/simon_button_01"
                    android:tag="0"
                    android:onClick="userTurn"/>
                <Button
                    android:id="@+id/simonButton02"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/simon_button_02"
                    android:tag="1"
                    android:onClick="userTurn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/simonButton03"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/simon_button_03"
                    android:tag="2"
                    android:onClick="userTurn"/>
                <Button
                    android:id="@+id/simonButton04"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/simon_button_04"
                    android:tag="3"
                    android:onClick="userTurn"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart_game_button"
            android:onClick="startGame"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_button"
            android:onClick="exitGame"/>
    </LinearLayout>

</LinearLayout>
